--- a/game.html
+++ b/game.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="apple-touch-icon" type="image/png" href="https://i.ibb.co/NS3c1Tb/logo.png" />
+<link rel="apple-touch-icon" type="image/png" href="https://i.ibb.co/pvt0xv3/casinobike-logo-round.png" />
 <meta name="apple-mobile-web-app-title" content="Casino Duende">
-<link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/NS3c1Tb/logo.png" />
-<title>Casino Duende Juego de Blackjack</title>
+<link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/pvt0xv3/casinobike-logo-round.png" />
+<title>Casino Bike Blackjack Game</title>
 <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css'>
 <style>
 div[id*="pcard"] .popover { left: -95px !important; }
@@ -26,7 +26,7 @@ h3 {
 
 #game {
     background: #063200 0 0 no-repeat;
-    background-image: url(https://i.ibb.co/nzQVfFN/table.png);
+    background-image: url(https://i.ibb.co/pnh6WHw/table.png);
     background-size: contain;
     border-radius: 5px;
     color: #222222;
@@ -213,7 +213,7 @@ body {
 <body translate="no">
 <div id="wrapper">
 <div id="ffr">
-<h1>Casino Duende Blackjack</h1>
+<h1>Casino Bike Blackjack</h1>
 </div>
 <div id="game">
 <div id="alert" class="alert alert-error hide"><span></span></div>
@@ -224,10 +224,10 @@ body {
 <div id="phand"></div>
 </div>
 <div id="money">
-<span id="cash">Cash: €<span></span></span>
-<div id="bank">Winnings: €<span></span></div>
+<span id="cash">Cash: $<span></span></span>
+<div id="bank">Winnings: $<span></span></div>
 </div>
-<a href="javascript://" rel="nofollow" onclick="window.open (' https://casinoduende.com');return false"><img class="fgt" width="50px" src="https://i.ibb.co/NS3c1Tb/logo.png"></a>
+<a href="javascript://" rel="nofollow" onclick="window.open (' https://casinobike.com');return false"><img class="fgt" width="50px" src="https://i.ibb.co/pvt0xv3/casinobike-logo-round.png"></a>
 </div>
 <div id="actions">
 <button id="deal" class="btn">Deal!</button>
@@ -245,7 +245,7 @@ body {
 <h3>Out of cash!</h3>
 </div>
 <div class="modal-body">
-<p>You have run out of cash, but go to a nearby ATM. Would you like to withdraw another € 1000 and try your luck again?</p>
+<p>You have run out of cash, but go to a nearby ATM. Would you like to withdraw another $1000 and try your luck again?</p>
 </div>
 <div class="modal-footer">
 <a href="#" id="cancel" class="btn">No</a>
@@ -257,7 +257,7 @@ body {
 <script src='https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js'></script>
 <script id="rendered-js">
 /*
-The JavaScript blackjack game created by Casino Duende (casinoduende.com)
+The JavaScript blackjack game created by Casino Bike (casinobike.com)
 */
 
 (function () {
