--- a/game.html
+++ b/game.html
@@ -227,7 +227,7 @@ body {
 <span id="cash">Cash: $<span></span></span>
 <div id="bank">Winnings: $<span></span></div>
 </div>
-<a href="javascript://" rel="nofollow" onclick="window.open (' https://casinobike.com');return false"><img class="fgt" width="50px" src="https://i.ibb.co/pvt0xv3/casinobike-logo-round.png"></a>
+<a href="javascript://" rel="noopener" onclick="window.open ('https://casinobike.com');return false"><img class="fgt" width="50px" src="https://i.ibb.co/pvt0xv3/casinobike-logo-round.png"></a>
 </div>
 <div id="actions">
 <button id="deal" class="btn">Deal!</button>
@@ -236,7 +236,7 @@ body {
 <button id="double" class="btn" disabled>Double Down</button>
 <button id="split" class="btn" disabled>Split</button>
 <button id="insurance" class="btn" disabled>Insurance</button>
-<strong>Wager:</strong> €<input id="wager" class="input-small" type="text" />
+<strong>Wager:</strong> $<input id="wager" class="input-small" type="text" />
 </div>
 </div>
 <div id="myModal" class="modal hide fade">
